# Source67

./: .gitignore  BUILDING.md  BUILD_ERROR_FIX.md  BUILD_SYSTEM_README.md  CMAKE_INSTALLATION.md  CMakeLists.txt  CODE_REVIEW_INDEX.md  CODE_REVIEW_REPORT.md  CODING-API.md  COMPLETE_FIX_GUIDE.md  COMPLETE_SUMMARY.md  CRITICAL_ISSUES_CHECKLIST.md  DETAILED_ISSUES.md  DISTRIBUTION.md  DOCUMENTATION_INDEX.md  FINAL_FIX_INSTRUCTIONS.md  FIXES_SUMMARY.md  FIXING_ABORT_ERROR.md  FIX_CURRENT_INSTALLATION.md  GAME_PROJECT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VISUAL_SUMMARY.md  INSTALLER_FIX_COMPLETE.md  INSTALLER_ISSUES_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_SUCCESS.md  InteractableRaycast.cpp  NATIVE_BUILD_SYSTEM_GUIDE.md  PROGRAM_FILES_CRASH_FIX.md  QUICK_FIX_GUIDE.md  QUICK_FIX_PROGRAM_FILES.md  QUICK_START_GUIDE.md  README.md  REVIEW_Application.md  REVIEW_FINDINGS_VISUAL.txt  REVIEW_SUMMARY.md  RUN.bat  START_HERE.md  START_HERE_NEW_USER.md  (+18 more)
.github/agents/: my-agent.agent.md
.github/workflows/: main.yml
MacOS/: Info.plist.in
Scripts/: Example.lua  InteractableRaycast.cpp  MoveEntityOnInteract.cpp  Spinner.lua  build.py
assets/layouts/: default.ini
assets/lua/gameplay/: game_manager.lua  player_controller.lua
assets/lua/ui/: menu.lua
assets/lua/util/: helpers.lua  math.lua
assets/shaders/: FlatColor.glsl  HUD.glsl  Lighting.glsl  Skybox.glsl  Texture.glsl
game/: CMakeLists.txt  CMakeLists.txt.template
game/src/: game_api.cpp  game_api.h
game/src/Components/: EnemyComponent.cpp  EnemyComponent.h  PlayerComponent.cpp  PlayerComponent.h
setup/: INSTALLER_ABORT_FIX.md  INSTALLER_FIX_EXPLAINED.md  INSTALLER_FIX_VISUAL.txt  INSTALLER_ISSUE2_VISUAL.txt  License.txt  PROGRAM_FILES_FIX_VISUAL.txt  QUICK_START_INSTALLER.md  README_INSTALLER.md  Source67.nsi  TROUBLESHOOTING_INSTALLER.md  build_installer.bat
source_engine/building/: build_prompt.md
source_engine/builds/: builds_prompt.md
source_engine/console/: console_prompt.md  console_quick_ref.md  console_research.md
source_engine/movement/: gamemovement.cpp  gamemovement.h  pmove.c  source_movement_prompt.md
source_engine/tick_system/: intergration_guide.md  tick_system_prompt.md  tick_system_quick_ref.md  tick_system_visual.md
src/Builder/: AssetProcessor.cpp  AssetProcessor.h  BuilderTool.cpp
src/Core/: Application.cpp  Application.h  Assert.h  Base.h  BuildSystem.cpp  BuildSystem.h  GameState.h  HybridBuildSystem.cpp  HybridBuildSystem.h  Input.cpp  Input.h  KeyCodes.h  Logger.cpp  Logger.h  MacPlatformUtils.mm  MouseCodes.h  PakSystem.cpp  PakSystem.h  PlatformUtils.cpp  PlatformUtils.h  Timer.h  Timestep.h  UndoSystem.h  VFS.cpp  VFS.h  Window.cpp  Window.h  Window.mm
src/Core/Console/: ConCommand.cpp  ConCommand.h  ConVar.cpp  ConVar.h  Console.cpp  Console.h
src/Editor/: AssetCooker.cpp  AssetCooker.h
src/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Game/: InteractableRaycast.cpp  MoveEntityOnInteract.cpp
src/Game/Console/: ConCommand.cpp  ConCommand.h  ConVar.cpp  ConVar.h  Console.cpp  Console.h  ConsolePanel.cpp  ConsolePanel.h  StandardCommands.cpp
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/ImGui/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  UIEditorPanel.cpp  UIEditorPanel.h
src/Physics/: PhysicsShapes.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerController.cpp  PlayerController.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Entity.h  Framebuffer.cpp  Framebuffer.h  GameModule.h  HUDRenderer.cpp  HUDRenderer.h  Light.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  ScriptRegistry.cpp  ScriptRegistry.h  ScriptableEntity.cpp  ScriptableEntity.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Runtime/: RuntimeMain.cpp
src/Scripting/: LuaScriptEngine.cpp  LuaScriptEngine.h
src/UI/: UIElement.h  UISystem.cpp  UISystem.h
tools/asset_packer/: AssetPacker.cpp  AssetPacker.h  AssetPackerTypes.h  CMakeLists.txt  main.cpp
